Add trpc. But, Schema type checking is not working

--- a/vite-project/tsconfig.json
+++ b/vite-project/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "jsx": "react",
+    "jsx": "preserve",
     "esModuleInterop": true,
     "module": "esnext",
     "target": "esnext",
