--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -16,6 +16,8 @@
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
     "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest",
+    "@trpc/client": "^10.45.1",
+    "@trpc/server": "^10.45.1",
     "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
